# astock-quant

./: .env.example  .gitignore  DEPLOY.md  P0-框架选型.md  P1-架构设计.md  P2-数据管道.md  P3-因子库.md  P3-模型训练.md  P4-回测与信号.md  P6-LLM因子.md  P7-LLM对比验证.md  P8-端到端验证.md  P9-收益率回归.md  README.md  Stage1-收尾说明.md  Stage2-启动准备.md  Stage2-收尾说明.md  Stage3-启动设计.md  Stage3-收尾说明.md  Stage4-启动设计.md  Stage4-收尾说明.md  predict-report-用户友好设计.md  progress.md  pyproject.toml  参考资料.md
artifacts/: .gitkeep
astock_quant/: __init__.py  contracts.py
data_cache/: .gitkeep
docs/: README.md  index.html
notebooks/: .gitkeep
scripts/: README.md  build_index.py  com.astock.daily.plist.template  daily_predict_wrapper.sh  realistic_backtest.py  run_pipeline.py  walk_forward_backtest.py
tests/: __init__.py  conftest.py  test_accuracy.py  test_ai_api.py  test_align_xy_determinism.py  test_astock_data_skill.py  test_backtest_engine.py  test_build_index.py  test_codex_cli_client.py  test_constraints_astock.py  test_daily_report.py  test_direction_model_roundtrip.py  test_dividend_retry.py  test_factor_frame_drop_nan.py  test_factors_no_lookahead.py  test_friendly_report.py  test_incremental_cache.py  test_launchd_scripts.py  test_llm_factor_with_mock_client.py  test_model_collapse_guard.py  test_pipeline_predict_only.py  test_pipeline_run_ranking.py  test_pipeline_run_return.py  test_prewarm_hs300.py  test_ranking_label.py  test_ranking_model.py  test_return_label.py  test_return_regressor.py  test_splits_purge.py  test_stock_analyst.py  test_trade_signal_label.py  test_trade_signal_model.py  (+1 more)
(+111 files in other folders)
